feat: doc swagger recipesController
