# api/docs/openapi.json
@@ -1,1 +1,237 @@
-{"openapi":"3.0.0","info":{"title":"YamYam API","version":"1.0.0","description":"YamYam API endpoints Documentation"},"components":{"schemas":{"User":{"type":"object","properties":{"id":{"type":"string","example":"fba03160-e9c7-42de-aac6-ac26f50f52d2"},"firstname":{"type":"string","example":"Sherman_Flatley56"},"role":{"type":"string","items":["user","admin"],"example":"user"},"email":{"type":"string","example":"Bailee75@hotmail.com"},"provider":{"type":"string","example":"database"},"remember_me_token":{"type":"string","example":null},"created_at":{"type":"string","example":"2023-01-29T04:24:59.000+01:00"},"updated_at":{"type":"string","example":"2023-01-29T04:24:59.000+01:00"}}},"ChartResponse":{"type":"object","properties":{"x":{"type":"string","example":"2023-01-01T00:00:00.000Z"},"y":{"type":"number","example":492}}}}},"paths":{"/users":{"get":{"tags":["Users"],"summary":"Retrieve all users","description":"Retrieve all users","produces":["application/json"],"responses":{"200":{"description":"Return array of users","content":{"application/json":{"schema":{"type":"array","items":{"$ref":"#/components/schemas/User"}}}}}}}},"/users/total/{period}":{"get":{"tags":["Users"],"summary":"Retrieve total users by period","description":"Retrieve all users by period","parameters":[{"name":"period","in":"path","description":"Period","required":true,"schema":{"type":"string","enum":["day","week","month","year"]}}],"produces":["application/json"],"responses":{"200":{"description":"Return array of objects","content":{"application/json":{"schema":{"properties":{"data":{"type":"array","items":{"$ref":"#/components/schemas/ChartResponse"}}}}}}}}}},"/users/registrations/{period}":{"get":{"tags":["Users"],"summary":"Retrieve user registrations by period","description":"Retrieve user registrations by period","parameters":[{"name":"period","in":"path","description":"Period","required":true,"schema":{"type":"string","enum":["day","week","month","year"]}}],"produces":["application/json"],"responses":{"200":{"description":"Return array of objects","content":{"application/json":{"schema":{"properties":{"data":{"type":"array","items":{"$ref":"#/components/schemas/ChartResponse"}}}}}}}}}},"/users/update":{"get":{"tags":["Users"],"requestBody":{"required":true,"content":{"application/json":{"description":"User payload","schema":{"type":"object","properties":{"phone":{"type":"string","example":"James Bond","required":true},"email":{"type":"string","example":"Bond007@example.com","required":true}}}}}},"produces":["application/json"],"responses":{"200":{"description":"Success","content":{"application/json":{"schema":{"$ref":"#/components/schemas/User"}}}}}}}},"tags":[]}
+{
+  "openapi": "3.0.0",
+  "info": {
+    "title": "YamYam API",
+    "version": "1.0.0",
+    "description": "YamYam API endpoints Documentation"
+  },
+  "components": {
+    "schemas": {
+      "User": {
+        "type": "object",
+        "properties": {
+          "id": {
+            "type": "string",
+            "example": "fba03160-e9c7-42de-aac6-ac26f50f52d2"
+          },
+          "firstname": {
+            "type": "string",
+            "example": "Sherman_Flatley56"
+          },
+          "role": {
+            "type": "string",
+            "items": [
+              "user",
+              "admin"
+            ],
+            "example": "user"
+          },
+          "email": {
+            "type": "string",
+            "example": "Bailee75@hotmail.com"
+          },
+          "provider": {
+            "type": "string",
+            "example": "database"
+          },
+          "remember_me_token": {
+            "type": "string",
+            "example": null
+          },
+          "created_at": {
+            "type": "string",
+            "example": "2023-01-29T04:24:59.000+01:00"
+          },
+          "updated_at": {
+            "type": "string",
+            "example": "2023-01-29T04:24:59.000+01:00"
+          }
+        }
+      },
+      "ChartResponse": {
+        "type": "object",
+        "properties": {
+          "x": {
+            "type": "string",
+            "example": "2023-01-01T00:00:00.000Z"
+          },
+          "y": {
+            "type": "number",
+            "example": 492
+          }
+        }
+      }
+    }
+  },
+  "paths": {
+    "/users": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Retrieve all users",
+        "description": "Retrieve all users",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Return array of users",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/User"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/total/{period}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Retrieve total users by period",
+        "description": "Retrieve all users by period",
+        "parameters": [
+          {
+            "name": "period",
+            "in": "path",
+            "description": "Period",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "enum": [
+                "day",
+                "week",
+                "month",
+                "year"
+              ]
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Return array of objects",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/ChartResponse"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/registrations/{period}": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "summary": "Retrieve user registrations by period",
+        "description": "Retrieve user registrations by period",
+        "parameters": [
+          {
+            "name": "period",
+            "in": "path",
+            "description": "Period",
+            "required": true,
+            "schema": {
+              "type": "string",
+              "enum": [
+                "day",
+                "week",
+                "month",
+                "year"
+              ]
+            }
+          }
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Return array of objects",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "properties": {
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/ChartResponse"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/update": {
+      "get": {
+        "tags": [
+          "Users"
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "description": "User payload",
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "phone": {
+                    "type": "string",
+                    "example": "James Bond",
+                    "required": true
+                  },
+                  "email": {
+                    "type": "string",
+                    "example": "Bond007@example.com",
+                    "required": true
+                  }
+                }
+              }
+            }
+          }
+        },
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  },
+  "tags": []
+}
